// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`EuiCollapsibleNav can be docked 1`] = `
<div>
  <div
    data-focus-guard="true"
    style="width:1px;height:0px;padding:0;overflow:hidden;position:fixed;top:1px;left:1px"
    tabindex="-1"
  />
  <div
    data-focus-guard="true"
    style="width:1px;height:0px;padding:0;overflow:hidden;position:fixed;top:1px;left:1px"
    tabindex="-1"
  />
  <div
    data-focus-lock-disabled="disabled"
  >
    <nav
      class="euiCollapsibleNav euiCollapsibleNav--isDocked"
      role="group"
    >
      <button
        class="euiButtonEmpty euiButtonEmpty--primary euiButtonEmpty--xSmall euiCollapsibleNav__closeButton"
        type="button"
      >
        <span
          class="euiButtonEmpty__content"
        >
          <div
            aria-hidden="true"
            class="euiButtonEmpty__icon"
            data-euiicon-type="cross"
          />
          <span
            class="euiButtonEmpty__text"
          >
            close
          </span>
        </span>
      </button>
    </nav>
  </div>
  <div
    data-focus-guard="true"
    style="width:1px;height:0px;padding:0;overflow:hidden;position:fixed;top:1px;left:1px"
    tabindex="-1"
  />
</div>
`;

exports[`EuiCollapsibleNav is rendered 1`] = `
Array [
  <div />,
  <div>
    <div
      data-focus-guard="true"
      style="width:1px;height:0px;padding:0;overflow:hidden;position:fixed;top:1px;left:1px"
      tabindex="0"
    />
    <div
      data-focus-guard="true"
      style="width:1px;height:0px;padding:0;overflow:hidden;position:fixed;top:1px;left:1px"
      tabindex="1"
    />
    <div
      data-focus-lock-disabled="false"
    >
      <nav
        aria-label="aria-label"
        class="euiCollapsibleNav testClass1 testClass2"
        data-test-subj="test subject string"
        role="group"
      >
        <button
          class="euiButtonEmpty euiButtonEmpty--primary euiButtonEmpty--xSmall euiCollapsibleNav__closeButton"
          type="button"
        >
          <span
            class="euiButtonEmpty__content"
          >
            <div
              aria-hidden="true"
              class="euiButtonEmpty__icon"
              data-euiicon-type="cross"
            />
            <span
              class="euiButtonEmpty__text"
            >
              close
            </span>
          </span>
        </button>
      </nav>
    </div>
    <div
      data-focus-guard="true"
      style="width:1px;height:0px;padding:0;overflow:hidden;position:fixed;top:1px;left:1px"
      tabindex="0"
    />
  </div>,
]
`;
